stage0/tests/sema/veo/60_error_private_field_access.veo
struct Secret {
    data: i32;
}

func leak(s: Secret) {
    // expected-error@+1: field 'data' of struct 'Secret' is private
    let x = s.data;
}
